fix alignment for column filter modal

--- a/less/site.less
+++ b/less/site.less
@@ -97,7 +97,20 @@
     .column-summary .main-view,
     .filter-view {
         max-height: 60vh;
-        overflow-y: scroll;
+        overflow: auto;
+
+        .imtable-constraint {
+            display: flex;
+        }
+
+        .constraint-input {
+            flex-grow: 1;
+            padding: 0 0.3em;
+        }
+
+        .toolbar {
+            margin: 0 0.3em 0.3em;
+        }
     }
 
     .column-summary-toolbar {
